@@ -1,4 +1,4 @@
-; @(#)$Ident: dist.ini 2013-12-15 22:14 pjf ;
+; @(#)$Ident: dist.ini 2014-01-06 17:38 pjf ;
 
 name = Module-Provision
 
@@ -35,6 +35,7 @@ Perl::Version         = 1.011
 Pod::Eventual         = 0.093330
 Template              = 2.22
 Type::Tiny            = 0.012
+Unexpected            = 0.20.1
 
 [Prereqs / ConfigureRequires]
 version           = 0.88
